--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^1.0.0-next.17",
 		"@sveltejs/kit": "1.0.0-next.282",
+		"@typescript-eslint/eslint-plugin": "^8.5.0",
+		"@typescript-eslint/parser": "^8.5.0",
 		"autoprefixer": "^10.4.2",
+		"eslint": "^9.10.0",
 		"postcss": "^8.4.6",
 		"prettier": "^2.4.1",
 		"prettier-plugin-svelte": "^2.4.0",
